--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Header Section -->
     <header>
         <div class="logo">
-            <img src="C:\Users\pc\Pictures\FMC Logo.jpg" width="100" height="50" alt="Find My Career">
+            <img src="C:\Users\pc\Pictures\FMC Logo.jpg" alt="Find My Career">
         </div>
         <nav>
             <ul>
@@ -59,7 +59,7 @@
     <section class="testimonials">
         <h2>What Our Clients Say</h2>
         <div class="testimonial">
-            <img src="C:\Users\pc\Pictures\Screenshots\career path.jpg" width="300" height="150" alt="career path">
+            <img src="C:\Users\pc\Pictures\Screenshots\career path.jpg" alt="career path">
             <p>"Thanks to Find My Career, I found a job that I love! The counseling was invaluable.</p>
         </div>
     </section>
