--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Find My Career</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -13,7 +13,7 @@
     <!-- Header Section -->
     <header>
         <div class="logo">
-            <img src="C:\Users\pc\Pictures\FMC Logo.jpg" width="100" height="80" alt="Find My Career">
+            <img src="C:\Users\pc\Pictures\FMC Logo.jpg" alt="Find My Career">
         </div>
         <nav>
             <ul>
@@ -28,7 +28,7 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <img src="C:\Users\pc\Pictures\Screenshots\career path3.jpg" width=" 150 " height="100 " alt="career path3">
+        <img src="C:\Users\pc\Pictures\Screenshots\career path3.jpg" width="150" height="100" alt="career path3">
         <div class="hero-content ">
             <h1>Find Your Perfect Career Path</h1>
             <p>Get expert advice, take career tests, and unlock your potential!</p>
@@ -59,7 +59,7 @@
     <section class="testimonials ">
         <h2>What Our Clients Say</h2>
         <div class="testimonial ">
-            <img src="C:\Users\pc\Pictures\Screenshots\career path2.jpg" width="300" height="150" alt="career path2">
+            <img src="C:\Users\pc\Pictures\Screenshots\career path2.jpg" alt="career path2">
             <p>"Thanks to Find My Career, I found a job that I love! The counseling was invaluable. " - Sarah L.</p>
         </div>
     </section>
