--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Services - Find My Career</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -13,7 +13,7 @@
     <!-- Header Section -->
     <header>
         <div class="logo">
-            <img src="C:\Users\pc\Pictures\FMC Logo.jpg" width="100" height="80" alt="Find My Career Logo">
+            <img src="C:\Users\pc\Pictures\FMC Logo.jpg" alt="Find My Career Logo">
         </div>
         <nav>
             <ul>
@@ -32,6 +32,16 @@
         <div class="service-item">
             <h2>Career Counseling</h2>
             <p>We provide personalized one-on-one sessions to help you discover your ideal career path.</p>
+            <p>Free Consultation</p>
+            <p>Video Consultation</p>
+            <p>Find My Career will provide you a scholarship on the base of your 12th percentage.</p>
+        </div>
+        <div class="service-item ">
+            <h3>Our Paid Courses</h3>
+            <p>Per/hour Charge 100$</p>
+            <p>Weekly Charges 500$</p>
+            <p>Monthly charges 2000$</p>
+            <p>Whole Course 5000$</p>
         </div>
         <div class="service-item">
             <h2>Resume Optimization</h2>
