--- a/career-tests.html
+++ b/career-tests.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Career Tests - Find My Career</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -13,7 +13,7 @@
     <!-- Header Section -->
     <header>
         <div class="logo">
-            <img src="C:\Users\pc\Pictures\FMC Logo.jpg" width="100" height="80" alt="Find My Career Logo">
+            <img src="C:\Users\pc\Pictures\FMC Logo.jpg" alt="Find My Career Logo">
         </div>
         <nav>
             <ul>
