--- a/services.html
+++ b/services.html
@@ -29,31 +29,33 @@
     <!-- Services Section -->
     <section class="services-list">
         <h1>Our Services</h1>
-        <div class="service-item">
-            <h2>Career Counseling</h2>
-            <p>We provide personalized one-on-one sessions to help you discover your ideal career path.</p>
-            <p>Free Consultation</p>
-            <p>Video Consultation</p>
-            <p>Find My Career will provide you a scholarship on the base of your 12th percentage.</p>
-        </div>
-        <div class="service-item ">
-            <h3>Our Paid Courses</h3>
-            <p>Per/hour Charge 100$</p>
-            <p>Weekly Charges 500$</p>
-            <p>Monthly charges 2000$</p>
-            <p>Whole Course 5000$</p>
-        </div>
-        <div class="service-item">
-            <h2>Resume Optimization</h2>
-            <p>We will help you build a resume that highlights your strengths and makes you stand out to recruiters.</p>
-        </div>
-        <div class="service-item">
-            <h2>Job Search Strategies</h2>
-            <p>Learn how to effectively search for jobs, build a network, and land interviews.</p>
-        </div>
-        <div class="service-item">
-            <h2>Interview Coaching</h2>
-            <p>Prepare for interviews with mock interviews and expert feedback.</p>
+        <div class="service-wrapper">
+            <div class="service-item">
+                <h2>Career Counseling</h2>
+                <p>We provide personalized one-on-one sessions to help you discover your ideal career path.</p>
+                <p>Free Consultation</p>
+                <p>Video Consultation</p>
+                <p>Find My Career will provide you a scholarship on the base of your 12th percentage.</p>
+            </div>
+            <div class="service-item ">
+                <h3>Our Paid Courses</h3>
+                <p>Per/hour Charge 100$</p>
+                <p>Weekly Charges 500$</p>
+                <p>Monthly charges 2000$</p>
+                <p>Whole Course 5000$</p>
+            </div>
+            <div class="service-item">
+                <h2>Resume Optimization</h2>
+                <p>We will help you build a resume that highlights your strengths and makes you stand out to recruiters.</p>
+            </div>
+            <div class="service-item">
+                <h2>Job Search Strategies</h2>
+                <p>Learn how to effectively search for jobs, build a network, and land interviews.</p>
+            </div>
+            <div class="service-item">
+                <h2>Interview Coaching</h2>
+                <p>Prepare for interviews with mock interviews and expert feedback.</p>
+            </div>
         </div>
     </section>
 
