--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
             <p><label for="lname">Last Name:</label>
                 <input type="text" id="lname" name="lname" required></p>
 
-            <p><label for="email">Email:</label>
+            <p style="gap:84px"><label for="email">Email:</label>
                 <input type="email" id="email" name="email" required></p>
 
             <p><label for="password">Password:</label>
@@ -51,9 +51,10 @@
                 <label><input type="radio" name="gender" value="female" required> Female</label>
                 <label><input type="radio" name="gender" value="other" required> Other</label>
 
+            </div>
+            <div>
                 <button type="submit">Register</button>
             </div>
-
         </form>
     </section>
 
